--- a/HTML - Personal Site/Contacts.html
+++ b/HTML - Personal Site/Contacts.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <p>Address</p>
-    <p>991</p>
-    <p>pogi@gmail.com</p>
+    <p>1432 Handsome Fil Newton, GA 30069</p>
+    <p>911</p>
+    <p>jpogi@gmail.com</p>
   </body>
 </html>
