--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -17,15 +17,15 @@
       <li>Immanuel Montessori School, Inc.</li>
     </ul>
     <h3>Work Experience</h3>
-    <p>2015-2016 Courtesy Clerk at Kroger</p>
     <p>2016-2017 Dairy Clerk at Kroger</p>
     <table>
       <tr>
         <td>2015-2016</td>
-        <td>Courtesy Clerk</td>
+        <td>Courtesy Clerk at Kroger</td>
       </tr>
       <tr>
-
+        <td>2016-2017</td>
+        <td>Dairy Clerk at Kroger</td>
       </tr>
     </table>
   <a href="Hobbies.html">My Hobbies</a>
