--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -18,6 +18,17 @@
     </ul>
     <h3>Work Experience</h3>
     <table>
+      <thead>
+          <th>Date</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+
+      </tbody>
+      <tfoot>
+
+      </tfoot>
       <tr>
         <td>2015-2016</td>
         <td>Courtesy Clerk at Kroger</td>
