--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -17,27 +17,8 @@
       <li>Immanuel Montessori School, Inc.</li>
     </ul>
     <h3>Work Experience</h3>
-    <table>
-      <thead>
-          <th>Date</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-
-      </tbody>
-      <tfoot>
-
-      </tfoot>
-      <tr>
-        <td>2015-2016</td>
-        <td>Courtesy Clerk at Kroger</td>
-      </tr>
-      <tr>
-        <td>2016-2017</td>
-        <td>Dairy Clerk at Kroger</td>
-      </tr>
-    </table>
+  <p>2012-2014 Courtesy Clerk at Kroger</p>
+  <p>2014 Dairy Clerk at Kroger</p>
     <hr>
   <a href="Hobbies.html">My Hobbies</a>
   <a href="Contacts.html">Contact Me</a>
