--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -17,8 +17,16 @@
       <li>Immanuel Montessori School, Inc.</li>
     </ul>
     <h3>Work Experience</h3>
-  <p>2012-2014 Courtesy Clerk at Kroger</p>
-  <p>2014 Dairy Clerk at Kroger</p>
+  <table>
+    <tr>
+      <td>2012-2014</td>
+      <td>Couresty Clerk at Kroger</td>
+    </tr>
+    <tr>
+      <td>2014</td>
+      <td>Dairy Clerk at Kroger</td>
+    </tr>
+  </table>
     <hr>
   <a href="Hobbies.html">My Hobbies</a>
   <a href="Contacts.html">Contact Me</a>
