--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -18,6 +18,18 @@
     </ul>
     <h3>Work Experience</h3>
   <table>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+    <tfoot>
+
+    </tfoot>
     <tr>
       <td>2012-2014</td>
       <td>Couresty Clerk at Kroger</td>
