--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,29 +6,53 @@
   </head>
 
   <body>
-    <img src="babyboss.png" alt="Jay Profile Picture">
-    <h1>Jay Gumtang</h1>
-    <p><em>Co-founder and CFO of <strong><a href="https://www.facebook.com/superjayie">Laundo</a></strong></em></p>
-    <p>I am kind-hearted gwapo. I love smart and sexy hot girls.</p>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="babyboss.png" alt="Jay Profile Picture"></td>
+        <td><h1>Jay Gumtang</h1><p><em>Co-founder and CFO of <strong><a href="https://www.facebook.com/superjayie">Laundo</a></strong></em></p>
+        <p>I am kind-hearted gwapo. I love smart and sexy hot girls.</p></td>
+      </tr>
+    </table>
     <hr>
     <h3>Education</h3>
     <ul>
       <li>Mabalacat Christian Academy</li>
       <li>Immanuel Montessori School, Inc.</li>
     </ul>
+    <hr>
     <h3>Work Experience</h3>
-  <table>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2014-2015</td>
+        <td>Courtesy Clerk at Work</td>
+      </tr>
+      <tr>
+        <td>2015</td>
+        <td>Dairy Clerk at Work</td>
+      </tr>
+    </tbody>
+  </table>
+<hr>
+  <h3>Skills</h3>
+  <table cellspacing="10">
     <tr>
-      <th>Dates</th>
-      <th>Work</th>
+      <td>HTML</td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>2012-2014</td>
-      <td>Couresty Clerk at Kroger</td>
+      <td>CSS</td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>2014</td>
-      <td>Dairy Clerk at Kroger</td>
+      <td>Playing Guitar</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
   </table>
     <hr>
