--- a/HTML - Personal Site/Contacts.html
+++ b/HTML - Personal Site/Contacts.html
@@ -9,5 +9,15 @@
     <p>1432 Handsome Fil Newton, GA 30069</p>
     <p>911</p>
     <p>jpogi@gmail.com</p>
+    <hr>
+    <form action="mailto:jlpgumtang@gmail.com" method="post" enctype="text/plain">
+      <label>Your Name:</label>
+      <input type="text" name="yourName" value=""><br>
+      <label>Your Email:</label>
+      <input type="email" name="yourEmail" value=""><br>
+      <label>Your Message:</label><br>
+      <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+      <input type="Submit" name="">
+    </form>
   </body>
 </html>
